# BTGenCobot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.coppelia  Dockerfile.gazebo  LICENSE  README.md  docker-compose.yml  foxglove_nav2_layout.json
inference_server/: bt_grammar.ebnf  prompts.py  pyproject.toml  test_complex.py  test_inference.py
inference_server/api/: main.py
inference_server/core/: config.py  inference.py  query_rewriter.py
inference_server/prompts/: alpaca_instruction.txt  available_actions.txt  few_shot_examples.json  system_prompt.txt
inference_server/validation/: post_processor.py  validator.py
models/btgenbot2/: README.md
models/btgenbot2/models/: config.json  generation_config.json  tokenizer_config.json
robot_description/mobile_manipulator/: CMakeLists.txt  README.md  package.xml
robot_description/mobile_manipulator/behavior_trees/: example_pick_and_place.xml  simple_navigation.xml  test_detect_only.xml  test_unique.xml  test_vlm_detection.xml
robot_description/mobile_manipulator/config/: arm_controller.yaml  nav2_params.yaml
robot_description/mobile_manipulator/launch/: bringup.launch.py  gazebo.launch.py  gazebo.launch.py.bak  gazebo.launch.py.bak2  gazebo.launch.py.bak3  nav2.launch.py
robot_description/mobile_manipulator/rviz/: mobile_manipulator.rviz
robot_description/mobile_manipulator/urdf/: mobile_manipulator.ros2_control.xacro  mobile_manipulator.urdf.xacro  openmanipulator_arm.gazebo.xacro  openmanipulator_arm.urdf.xacro
robot_description/mobile_manipulator/urdf/sensors/: rplidar_cpu.urdf.xacro
robot_description/turtlebot3_manipulation_description/: CMakeLists.txt  package.xml
robot_description/turtlebot3_manipulation_description/config/: controller_manager.yaml
robot_description/turtlebot3_manipulation_description/gazebo/: turtlebot3_waffle_pi.gazebo.xacro
robot_description/turtlebot3_manipulation_description/launch/: gazebo.launch.py
robot_description/turtlebot3_manipulation_description/ros2_control/: turtlebot3_manipulation_system.ros2_control.xacro
robot_description/turtlebot3_manipulation_description/rviz/: model.rviz
robot_description/turtlebot3_manipulation_description/urdf/: turtlebot3_manipulation.urdf.xacro
scripts/: send_goal.py  verify_bt.py
src/bt_bringup/: CMakeLists.txt  package.xml
src/bt_bringup/config/: nav2_config.yaml  slam_toolbox_config.yaml
src/bt_bringup/launch/: full_nav2_bringup.launch.py  full_slam_bringup.launch.py  nav2_bringup.launch.py  robot_bt_bringup.launch.py  robot_bt_localization.launch.py  slam.launch.py
src/bt_description/: CMakeLists.txt  package.xml
src/bt_generator/: package.xml  setup.cfg  setup.py
src/bt_nav2_plugins/: CMakeLists.txt  package.xml
src/bt_nav2_plugins/include/bt_nav2_plugins/: detect_object.hpp  pick_object.hpp  place_object.hpp  spin_left.hpp  spin_right.hpp
src/bt_nav2_plugins/plugins/: bt_nav2_plugins.xml
src/bt_nav2_plugins/src/: detect_object.cpp  pick_object.cpp  place_object.cpp  plugin_registration.cpp  spin_left.cpp  spin_right.cpp
src/bt_text_interface/: package.xml  setup.cfg  setup.py
src/bt_text_interface/bt_text_interface/: __init__.py  bt_interface_node.py
src/bt_xml_publisher/: package.xml  setup.cfg  setup.py
src/bt_xml_publisher/bt_xml_publisher/: bt_xml_publisher_node.py
src/btgencobot_interfaces/: CMakeLists.txt  package.xml
src/btgencobot_interfaces/action/: GenerateAndExecuteBT.action
src/btgencobot_interfaces/srv/: DetectObject.srv  ManipulatorAction.srv
src/manipulator_control/: package.xml  setup.cfg  setup.py
src/manipulator_control/launch/: manipulator_service.launch.py
src/manipulator_control/manipulator_control/: __init__.py  manipulator_service.py
src/vision_services/: package.xml  setup.cfg  setup.py
src/vision_services/vision_services/: florence2_sam_service.py  florence2_sam_service.py.backup  florence2_service.py  grounding_dino_service.py
