[project]
name = "btgen-inference-server"
version = "1.0.0"
description = "BehaviorTree Generation Inference Server with Transformers"
authors = [{name = "BTGenCobot", email = "noreply@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "peft>=0.6.0",
    "outlines>=0.1.0",
    "llguidance>=0.1.0",
    "lxml>=5.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "accelerate>=0.20.0",
    "litellm>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
serve = "api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "validation", "prompts"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
]
