<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bt_nav2_plugins</name>
  <version>0.1.0</version>
  <description>Custom BehaviorTree plugins for Nav2</description>
  <maintainer email="user@todo.todo">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>behaviortree_cpp</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>
  <depend>btgencobot_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_behavior_tree plugin="${prefix}/plugins/bt_nav2_plugins.xml" />
  </export>
</package>
