<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bt_text_interface</name>
  <version>1.0.0</version>
  <description>ROS2 action server for BehaviorTree generation from text commands</description>
  <maintainer email="tomtom4830@gmail.com">Tommaso De Pascale</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS2 core -->
  <depend>rclpy</depend>
  <depend>action_msgs</depend>

  <!-- Messages -->
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>btgencobot_interfaces</depend>

  <!-- Python dependencies (note: 'requests' is installed via pip, not rosdep) -->
  <exec_depend>python3-requests</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
