<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulator_control</name>
  <version>1.0.0</version>
  <description>Manipulator control service using ikpy for inverse kinematics</description>
  <maintainer email="tomtom4830@gmail.com">Tommaso De Pascale</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 core -->
  <depend>rclpy</depend>
  <depend>action_msgs</depend>

  <!-- Messages -->
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>btgencobot_interfaces</depend>

  <!-- TF2 -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Python dependencies (note: ikpy, numpy, scipy are installed via pip) -->
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
