<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_services</name>
  <version>1.0.0</version>
  <description>Vision service nodes for BTGenCobot (Florence-2 object detection)</description>
  <maintainer email="tomtom4830@gmail.com">Tommaso De Pascale</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 core -->
  <depend>rclpy</depend>

  <!-- Messages -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>btgencobot_interfaces</depend>

  <!-- TF2 -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Vision/Image processing -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- Python dependencies available via rosdep -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pillow</exec_depend>

  <!-- Note: torch, torchvision, transformers, timm, einops are ML deps installed via pip -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
